force-app/main/default/objects/LienCrecheOpportunite__c/fields/Creche__c.field-meta.xml
<CustomField>
    <fullName>Creche__c</fullName>
    <label>Crèche</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunité(s) liée(s) à la crèche</relationshipLabel>
    <relationshipName>OpportuniteCreche</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>