force-app/main/default/objects/LienCrecheOpportunite__c/fields/LPCR_Nombredeplaces__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Nombredeplaces__c</fullName>
    <description>Nombre de places demandées</description>
    <label>Nombre de places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>