force-app/main/default/objects/LienCrecheOpportunite__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Crèche(s) de l&#39;Opportunité</relationshipLabel>
    <relationshipName>CrecheOpportunite</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>